fixed alignment of wind and humidity

--- a/style.css
+++ b/style.css
@@ -48,11 +48,11 @@ li:first-letter {
 }
 
 .weather-temperature img {
+  margin-top: 0;
   margin-right: 5px;
-  height: 134px;
-  width: 134px;
+  height: 84px;
+  width: 84px;
 }
-
 .weather-temperature strong {
   color: rgb(33, 33, 33);
   font-size: 84px;
@@ -73,23 +73,4 @@ li:first-letter {
 
 .weather-temperature .active:hover {
   text-decoration: none;
-}
-
-.weather-forecast {
-  margin-top: 20px;
-  text-align: center;
-  color: #000;
-}
-
-.weather-forecast-date {
-  font-size: 16px;
-  opacity: 0.5;
-}
-
-.weather-forecast-temperature-min {
-  opacity: 0.5;
-}
-
-.weather-forecast-temperatures {
-  font-size: 13px;
 }
